docs/pages/versions/v57.0.0/sdk/ui/swift-ui/toggle.mdx
---
title: Toggle
description: A SwiftUI Toggle component for displaying native toggles.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** For cross-platform usage, see the universal [`Switch`](../universal/switch) — it renders the appropriate native component per platform.

Expo UI Toggle matches the official SwiftUI [Toggle API](https://developer.apple.com/documentation/swiftui/toggle) and supports styling via the [`toggleStyle`](modifiers/#togglestylestyle) modifier.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/toggle/ios-light.webp"
  darkSrc="/static/images/expo-ui/toggle/ios-dark.webp"
  alt="Toggle rows inside a Form"
/>

## Installation

<APIInstallSection />

## Usage

### Basic toggle

<ComponentExample
  title="BasicToggleExample.tsx"
  src="/static/images/expo-ui/examples/toggle-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/toggle-basic-ios-dark.webp"
  alt="A row labeled Enable feature with a switch turned off at the trailing edge">

```tsx
import { useState } from 'react';
import { Host, Toggle } from '@expo/ui/swift-ui';

export default function BasicToggleExample() {
  const [isOn, setIsOn] = useState(false);

  // `matchContents` sizes the host to its content instead of filling the space.
  // A toggle row stretches to the width it is given, so give the host a size.
  return (
    <Host style={{ flex: 1 }}>
      <Toggle isOn={isOn} onIsOnChange={setIsOn} label="Enable feature" />
    </Host>
  );
}
```

</ComponentExample>

### Toggle with system image

<ComponentExample
  title="ToggleWithImageExample.tsx"
  src="/static/images/expo-ui/examples/toggle-system-image-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/toggle-system-image-ios-dark.webp"
  alt="A row with an airplane icon labeled Airplane Mode and a switch turned off">

```tsx
import { useState } from 'react';
import { Host, Toggle } from '@expo/ui/swift-ui';

export default function ToggleWithImageExample() {
  const [airplaneMode, setAirplaneMode] = useState(false);

  return (
    <Host style={{ flex: 1 }}>
      <Toggle
        isOn={airplaneMode}
        onIsOnChange={setAirplaneMode}
        label="Airplane Mode"
        systemImage="airplane"
      />
    </Host>
  );
}
```

</ComponentExample>

### Toggle styles

Use the `toggleStyle` modifier to change the toggle's appearance. Available styles are: `automatic`, `switch`, and `button`.

> **Note:** The `button` style is not available on tvOS.

<ComponentExample
  title="ToggleStylesExample.tsx"
  src="/static/images/expo-ui/examples/toggle-styles-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/toggle-styles-ios-dark.webp"
  alt="A Switch Style row with its switch turned on, above a Button Style toggle in its selected filled state">

```tsx
import { useState } from 'react';
import { Host, Toggle, VStack } from '@expo/ui/swift-ui';
import { toggleStyle } from '@expo/ui/swift-ui/modifiers';

export default function ToggleStylesExample() {
  const [isOn, setIsOn] = useState(false);

  return (
    <Host style={{ flex: 1 }}>
      <VStack spacing={8}>
        <Toggle
          isOn={isOn}
          onIsOnChange={setIsOn}
          label="Switch Style"
          modifiers={[toggleStyle('switch')]}
        />
        <Toggle
          isOn={isOn}
          onIsOnChange={setIsOn}
          label="Button Style"
          modifiers={[toggleStyle('button')]}
        />
      </VStack>
    </Host>
  );
}
```

</ComponentExample>

### Tinted toggle

Use the `tint` modifier to change the toggle's color.

<ComponentExample
  title="TintedToggleExample.tsx"
  src="/static/images/expo-ui/examples/toggle-tinted-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/toggle-tinted-ios-dark.webp"
  alt="A row labeled Custom Color with a switch turned on and tinted orange">

```tsx
import { useState } from 'react';
import { Host, Toggle } from '@expo/ui/swift-ui';
import { tint } from '@expo/ui/swift-ui/modifiers';

export default function TintedToggleExample() {
  const [isOn, setIsOn] = useState(true);

  return (
    <Host style={{ flex: 1 }}>
      <Toggle
        isOn={isOn}
        onIsOnChange={setIsOn}
        label="Custom Color"
        modifiers={[tint('#FF9500')]}
      />
    </Host>
  );
}
```

</ComponentExample>

### Custom label content

You can pass custom components as `children` for more complex toggle labels. Use multiple `Text` views where the first represents the title and the second represents the subtitle.

<ComponentExample
  title="CustomLabelExample.tsx"
  src="/static/images/expo-ui/examples/toggle-custom-label-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/toggle-custom-label-ios-dark.webp"
  alt="A toggle row with the title Vibrate on ring above a grey subtitle line">

```tsx
import { useState } from 'react';
import { Host, Toggle, Text } from '@expo/ui/swift-ui';

export default function CustomLabelExample() {
  const [vibrateOnRing, setVibrateOnRing] = useState(false);

  return (
    <Host style={{ flex: 1 }}>
      <Toggle isOn={vibrateOnRing} onIsOnChange={setVibrateOnRing}>
        <Text>Vibrate on ring</Text>
        <Text>Enable vibration when the phone rings</Text>
      </Toggle>
    </Host>
  );
}
```

</ComponentExample>

### Hidden label

Use the [`labelsHidden`](modifiers/#labelshidden) modifier to hide the label while keeping it for accessibility.

<ComponentExample
  title="HiddenLabelExample.tsx"
  src="/static/images/expo-ui/examples/toggle-hidden-label-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/toggle-hidden-label-ios-dark.webp"
  alt="A switch on its own, with no visible label text">

```tsx
import { useState } from 'react';
import { Host, Toggle } from '@expo/ui/swift-ui';
import { labelsHidden } from '@expo/ui/swift-ui/modifiers';

export default function HiddenLabelExample() {
  const [isOn, setIsOn] = useState(false);

  return (
    <Host style={{ flex: 1 }}>
      <Toggle
        isOn={isOn}
        onIsOnChange={setIsOn}
        label="Hidden Label"
        modifiers={[labelsHidden()]}
      />
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { Toggle } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/toggle" apiName="Toggle" />
